Add optional API key auth and safer CORS defaults

--- a/base_for_agent_cv/.env.example
+++ b/base_for_agent_cv/.env.example
@@ -2,7 +2,19 @@
 
 OPENAI_API_KEY=sk-...
 OPENAI_MODEL=gpt-5.2
+
 # Optional
 APP_VERSION=2.0.0
+
+# Security (recommended for any non-local deployment)
+# If set, all API calls must include header: X-API-Key: <API_KEY>
+API_KEY=
+
+# CORS
+# Comma-separated origins (default allows only localhost)
+CORS_ALLOW_ORIGINS=http://localhost:8000,http://127.0.0.1:8000
+# Safer default is false. Set true only if you use cookies/credentialed requests.
+CORS_ALLOW_CREDENTIALS=false
+
 # Optional (if/when used)
 OPENAI_VECTOR_STORE_ID=
